syntax = "proto3";

package slash.store;

option go_package = "gen/store";

enum RowStatus {
  ROW_STATUS_UNSPECIFIED = 0;

  NORMAL = 1;

  ARCHIVED = 2;
}

enum Visibility {
  VISIBILITY_UNSPECIFIED = 0;

  WORKSPACE = 1;

  PUBLIC = 2;
}
